tests/regression/error/hw4_error13.sml
val prog =
  PROGRAM
    {classes=[],decls=[],funcs=[],
     stmts=[ST_EXP {exp=EXP_UNARY {opnd=EXP_NONE,opr=UOP_NOT}}]} : program
;
